fix home button on mobile view

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -42,6 +42,9 @@
   text-align: center;
   padding: 2rem;
   background-color: #f4f4f9;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .skills h2 {
@@ -65,7 +68,6 @@
   }
 
   .cta-button {
-    width: 100%;
     text-align: center;
   }
 }
